tests/stage2/valid/multi_assign.c
int main(){
    int a = 3;
    int b;
    int c;
    b = c = a;
    return b + c;
}
