tests/stage2/invalid/if_no_cond.c
int main(){
    if(){
        return 3;
    }
    return 1;
}
